Removed case study references, added tools used as backends, added descriptions of tools

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -67,7 +67,7 @@
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_31) Inner and Outer Approximating Flowpipes for Delay Differential Equations.
     [Eric Goubault](https://dblp.uni-trier.de/pid/90/1132.html), [Sylvie Putot](https://dblp.uni-trier.de/pid/61/1269.html), [Lorenz Sahlmann](https://dblp.uni-trier.de/pid/223/5310.html)
 
--   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_2) [[MaxSMT]]-Based Type Inference for Python 3.
+-   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_2) MaxSMT-Based Type Inference for Python 3.
     [Mostafa Hassan](https://dblp.uni-trier.de/pid/223/5094.html), [Caterina Urban](https://dblp.uni-trier.de/pid/130/9842.html), [Marco Eilers](https://dblp.uni-trier.de/pid/217/4745.html), [Peter Müller ](https://dblp.uni-trier.de/pid/m/PMuller1.html)
 	Tool: [[Typpete]]
 
@@ -99,15 +99,13 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_25) Formal Verification of a Vehicle-to-Vehicle (V2V) Messaging System.
     [Mark Tullsen](https://dblp.uni-trier.de/pid/95/6125.html), [Lee Pike](https://dblp.uni-trier.de/pid/p/LeePike.html), [Nathan Collins](https://dblp.uni-trier.de/pid/65/10809.html), [Aaron Tomb](https://dblp.uni-trier.de/pid/91/466.html)
-	Uses [[HAAW]] and [[SAW]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_30) Formally Verified Montgomery Multiplication.
     [Christoph Walther](https://dblp.uni-trier.de/pid/w/ChristophWalther.html)
-	Uses [[VeriFun]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_11) Lazy Self-composition for Security Verification.
     [Weikun Yang](https://dblp.uni-trier.de/pid/167/0229.html), [Yakir Vizel](https://dblp.uni-trier.de/pid/86/2578.html), [Pramod Subramanyan](https://dblp.uni-trier.de/pid/27/8110.html), [Aarti Gupta](https://dblp.uni-trier.de/pid/18/2229.html), [Sharad Malik](https://dblp.uni-trier.de/pid/79/6934.html)
-	Implemented [[IFC-CEGAR]] and [[IFC-BMC]] on top of [[SeaHorn]]
+	Implemented [[IFC-CEGAR]] and [[IFC-BMC]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_20) Partial Order Aware Concurrency Sampling.
     [Xinhao Yuan](https://dblp.uni-trier.de/pid/70/10355.html), [Junfeng Yang](https://dblp.uni-trier.de/pid/71/3724.html), [Ronghui Gu](https://dblp.uni-trier.de/pid/155/8148.html)
