Updated info from CAV '19 proceedings, removed case study references, added backend tools

--- a/Conferences/CAV 2019(2).md
+++ b/Conferences/CAV 2019(2).md
@@ -15,7 +15,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_15) Verification of Threshold-Based Distributed Algorithms by Decomposition to Decidable Logics.
     [Idan Berkovits](https://dblp.uni-trier.de/pid/241/6049.html), [Marijana Lazic](https://dblp.uni-trier.de/pid/185/0660.html), [Giuliano Losa](https://dblp.uni-trier.de/pid/04/11066.html), [Oded Padon](https://dblp.uni-trier.de/pid/155/8122.html), [Sharon Shoham](https://dblp.uni-trier.de/pid/92/128.html)
-	Uses [[CVC4]], [[Z3]] and [[Ivy]] (for verification check, did not implement anything in these tools)
+	Uses [[CVC4]], [[Z3]] and [[Ivy]] in the implementation of their algorithms
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_19) On the Complexity of Checking Consistency for Replicated Data Types.
     [Ranadeep Biswas](https://dblp.uni-trier.de/pid/244/8272.html), [Michael Emmi](https://dblp.uni-trier.de/pid/76/5819.html), [Constantin Enea](https://dblp.uni-trier.de/pid/72/2839.html)
@@ -54,7 +54,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_28) Integrating Formal Schedulability Analysis into a Verified OS Kernel.
     [Xiaojie Guo](https://dblp.uni-trier.de/pid/43/8066.html), [Maxime Lesourd](https://dblp.uni-trier.de/pid/233/0573.html), [Mengqi Liu ](https://dblp.uni-trier.de/pid/239/5467.html), [Lionel Rieg](https://dblp.uni-trier.de/pid/33/1736.html), [Zhong Shao](https://dblp.uni-trier.de/pid/s/ZhongShao.html)
-	Uses [[Prosa]]
+	Uses Prosa
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_3) Alternating Automata Modulo First Order Theories.
     [Radu Iosif](https://dblp.uni-trier.de/pid/81/5510.html), [Xiao Xu](https://dblp.uni-trier.de/pid/64/4216.html)
@@ -65,7 +65,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_21) Interpolating Strong Induction.
     [Hari Govind Vediramana Krishnan](https://dblp.uni-trier.de/pid/204/2535.html), [Yakir Vizel](https://dblp.uni-trier.de/pid/86/2578.html), [Vijay Ganesh](https://dblp.uni-trier.de/pid/g/VijayGanesh.html), [Arie Gurfinkel](https://dblp.uni-trier.de/pid/44/3532.html)
-	Implemented in [[Avy]]
+	Implemented on top of [[Avy]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_25) [[AliveInLean]] - A Verified LLVM Peephole Optimization Verifier.
     [Juneyoung Lee](https://dblp.uni-trier.de/pid/181/5852.html), [Chung-Kil Hur](https://dblp.uni-trier.de/pid/75/3287.html), [Nuno P. Lopes](https://dblp.uni-trier.de/pid/77/2149.html)
@@ -76,11 +76,11 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_22) Verifying Asynchronous Event-Driven Programs Using Partial Abstract Transformers.
     [Peizun Liu](https://dblp.uni-trier.de/pid/156/3487.html), [Thomas Wahl](https://dblp.uni-trier.de/pid/72/5272.html), [Akash Lal](https://dblp.uni-trier.de/pid/27/1008.html)
-	Implemented in [[PTester]]
+	Implemented atop [[PTester]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_12) Formal Verification of Quantum Algorithms Using Quantum Hoare Logic.
     [Junyi Liu](https://dblp.uni-trier.de/pid/122/7374.html), [Bohua Zhan](https://dblp.uni-trier.de/pid/31/11002.html), [Shuling Wang](https://dblp.uni-trier.de/pid/97/4633.html), [Shenggang Ying](https://dblp.uni-trier.de/pid/132/6904.html), [Tao Liu](https://dblp.uni-trier.de/pid/43/656.html), [Yangjia Li](https://dblp.uni-trier.de/pid/51/10827.html), [Mingsheng Ying](https://dblp.uni-trier.de/pid/13/6525.html), [Naijun Zhan](https://dblp.uni-trier.de/pid/63/1911.html)
-	Formalized in [[Isabelle-HOL]]
+	Formalized in Isabelle-HOL
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_26) Automated Parameterized Verification of CRDTs.
     [Kartik Nagar](https://dblp.uni-trier.de/pid/120/1805.html), [Suresh Jagannathan](https://dblp.uni-trier.de/pid/j/SJagannathan.html)
@@ -98,7 +98,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_27) What's Wrong with On-the-Fly Partial Order Reduction.
     [Stephen F. Siegel](https://dblp.uni-trier.de/pid/50/540.html)
-	Used [[Alloy]]
+	Used Alloy
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_7) Loop Summarization with Rational Vector Addition Systems.
     [Jake Silverman](https://dblp.uni-trier.de/pid/183/9781.html), [Zachary Kincaid](https://dblp.uni-trier.de/pid/61/6578.html)
@@ -109,4 +109,4 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25543-5_29) Rely-Guarantee Reasoning About Concurrent Memory Management in Zephyr RTOS.
     [Yongwang Zhao](https://dblp.uni-trier.de/pid/70/2470.html), [David Sanán](https://dblp.uni-trier.de/pid/22/111.html)
-	Formally specified and proven in [[Isabelle-HOL]]
+	Formally specified and proven in Isabelle-HOL
