--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -26,7 +26,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_7) Verifying Hyperliveness.
     [Norine Coenen](https://dblp.uni-trier.de/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [César Sánchez](https://dblp.uni-trier.de/pid/38/1858.html), [Leander Tentrup](https://dblp.uni-trier.de/pid/143/2715.html)
-	Implemented in [[MCHyper]]
+	Implemented in [[MCHyper]], and a tool without a name for the synthesis of strategies and reactive systems from hyperproperties that uses [[Z3]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_1) Symbolic Register Automata.
     [Loris D'Antoni](https://dblp.uni-trier.de/pid/85/770.html), [Tiago Ferreira](https://dblp.uni-trier.de/pid/201/3471.html), [Matteo Sammartino](https://dblp.uni-trier.de/pid/120/2179.html), [Alexandra Silva ](https://dblp.uni-trier.de/pid/92/1378-1.html)
@@ -34,18 +34,18 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_20) When Human Intuition Fails - Using Formal Methods to Find an Error in the "Proof" of a Multi-agent Protocol.
     [Jennifer A. Davis](https://dblp.uni-trier.de/pid/72/871.html), [Laura R. Humphrey](https://dblp.uni-trier.de/pid/144/8597.html), [Derek B. Kingston](https://dblp.uni-trier.de/pid/41/6176.html)
-	[[AGREE]]
+	Uses AGREE
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_13) Synthesizing Approximate Implementations for Unrealizable Specifications.
     [Rayna Dimitrova](https://dblp.uni-trier.de/pid/69/2960.html), [Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Hazem Torfah](https://dblp.uni-trier.de/pid/140/9733.html)
-	Uses CAQE and MaxCount for solving synthesis instances
+	Implemented approaches, Uses CAQE and MaxCount for solving synthesis instances
 	
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_25) [[VerifAI]] - A Toolkit for the Formal Design and Analysis of Artificial Intelligence-Based Systems.
     [Tommaso Dreossi](https://dblp.uni-trier.de/pid/117/9140.html), [Daniel J. Fremont](https://dblp.uni-trier.de/pid/144/7602.html), [Shromona Ghosh](https://dblp.uni-trier.de/pid/164/5676.html), [Edward Kim](https://dblp.uni-trier.de/pid/06/445.html), [Hadi Ravanbakhsh](https://dblp.uni-trier.de/pid/134/9799.html), [Marcell Vazquez-Chanlatte](https://dblp.uni-trier.de/pid/192/1518.html), [Sanjit A. Seshia](https://dblp.uni-trier.de/pid/s/SanjitASeshia.html)
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_15) Efficient Synthesis with Probabilistic Constraints.
     [Samuel Drews](https://dblp.uni-trier.de/pid/182/9259.html), [Aws Albarghouthi](https://dblp.uni-trier.de/pid/90/8295.html), [Loris D'Antoni](https://dblp.uni-trier.de/pid/85/770.html)
-	Implemented their algorithm [[T-DIGITS]]
+	Implemented their algorithm [[τ-DIGITS]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_10) Security-Aware Synthesis Using Delayed-Action Games.
     [Mahmoud Elfar](https://dblp.uni-trier.de/pid/198/8166.html), [Yu Wang ](https://dblp.uni-trier.de/pid/02/5889-44.html), [Miroslav Pajic](https://dblp.uni-trier.de/pid/74/7446.html)
@@ -67,7 +67,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_35) Temporal Stream Logic - Synthesis Beyond the Bools.
     [Bernd Finkbeiner](https://dblp.uni-trier.de/pid/73/4443.html), [Felix Klein ](https://dblp.uni-trier.de/pid/80/8313-1.html), [Ruzica Piskac](https://dblp.uni-trier.de/pid/p/RuzicaPiskac.html), [Mark Santolucito](https://dblp.uni-trier.de/pid/115/9332.html)
-	Implemented but doesn't seem to have a specific name. 
+	Implemented but doesn't seem to have a specific name. Uses [[BoSy]] 
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_3) Fast Algorithms for Handling Diagonal Constraints in Timed Automata.
     [Paul Gastin](https://dblp.uni-trier.de/pid/g/PaulGastin.html), [Sayan Mukherjee ](https://dblp.uni-trier.de/pid/52/5375-2.html), [B. Srivathsan](https://dblp.uni-trier.de/pid/86/8295.html)
@@ -79,7 +79,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_27) Probabilistic Bisimulation for Parameterized Systems - (with Applications to Verifying Anonymous Protocols).
     [Chih-Duo Hong](https://dblp.uni-trier.de/pid/00/8296.html), [Anthony W. Lin](https://dblp.uni-trier.de/pid/38/2655.html), [Rupak Majumdar](https://dblp.uni-trier.de/pid/71/1981.html), [Philipp Rümmer](https://dblp.uni-trier.de/pid/79/5611.html)
-	Implementation has no name
+	Implementation has no name, uses [[Mona]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_18) Proving Unrealizability for Syntax-Guided Synthesis.
     [Qinheping Hu](https://dblp.uni-trier.de/pid/201/4822.html), [Jason Breck](https://dblp.uni-trier.de/pid/148/1307.html), [John Cyphert](https://dblp.uni-trier.de/pid/211/9268.html), [Loris D'Antoni](https://dblp.uni-trier.de/pid/85/770.html), [Thomas W. Reps](https://dblp.uni-trier.de/pid/r/TWReps.html)
@@ -118,15 +118,15 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_2) Abstraction Refinement Algorithms for Timed Automata.
     [Victor Roussanaly](https://dblp.uni-trier.de/pid/241/5977.html), [Ocan Sankur](https://dblp.uni-trier.de/pid/11/7805.html), [Nicolas Markey](https://dblp.uni-trier.de/pid/m/NicolasMarkey.html)
-	Implemented two algorithms, no names.
+	Implemented two algorithms, no names. Uses [[CUDD]], [[Uppaal DBM library]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_9) Property Directed Self Composition.
     [Ron Shemer](https://dblp.uni-trier.de/pid/241/5907.html), [Arie Gurfinkel](https://dblp.uni-trier.de/pid/44/3532.html), [Sharon Shoham](https://dblp.uni-trier.de/pid/92/128.html), [Yakir Vizel](https://dblp.uni-trier.de/pid/86/2578.html)
-	Implemented the [[PDSC]] algorithm, no name for implementation
+	Implemented the [[PDSC]] algorithm, no name for implementation, uses [[Z3]], [[Spacer]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_16) Membership-Based Synthesis of Linear Hybrid Automata.
     [Miriam García Soto](https://dblp.uni-trier.de/pid/132/1936.html), [Thomas A. Henzinger](https://dblp.uni-trier.de/pid/h/ThomasAHenzinger.html), [Christian Schilling ](https://dblp.uni-trier.de/pid/72/2103-1.html), [Luka Zeleznik](https://dblp.uni-trier.de/pid/244/8265.html)
-	Implementation of algorithm, no name
+	Implementation of algorithm, no name, uses [[pplpy]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_8) Quantitative Mitigation of Timing Side Channels.
     [Saeid Tizpaz-Niari](https://dblp.uni-trier.de/pid/195/5725.html), [Pavol Cerný](https://dblp.uni-trier.de/pid/34/6556.html), [Ashutosh Trivedi ](https://dblp.uni-trier.de/pid/06/5756.html)
@@ -138,5 +138,5 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_23) Multi-armed Bandits for Boolean Connectives in Hybrid System Falsification.
     [Zhenya Zhang](https://dblp.uni-trier.de/pid/98/4896.html), [Ichiro Hasuo](https://dblp.uni-trier.de/pid/26/4542.html), [Paolo Arcaini](https://dblp.uni-trier.de/pid/86/7855.html) 
-	Implemented two algorithms MAB-UCB and MAB-ε-greedy
+	Implemented two algorithms MAB-UCB and MAB-ε-greedy, uses [[Breach]]
 
