Added template to several tool pages

--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -126,7 +126,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_22) Learning Abstractions for Program Synthesis.
     [Xinyu Wang](https://dblp.uni-trier.de/pid/68/1277-6.html), [Greg Anderson](https://dblp.uni-trier.de/pid/53/6132.html), [Isil Dillig](https://dblp.uni-trier.de/pid/85/3688.html), [Kenneth L. McMillan](https://dblp.uni-trier.de/pid/m/KennethLMcMillan.html)
-	Implemented as [[Atlas]]
+	Implemented as [[ATLAS]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_2) From Programs to Interpretable Deep Models and Back.
     [Eran Yahav](https://dblp.uni-trier.de/pid/54/5133.html)
