--- a/Tools/Z3.md
+++ b/Tools/Z3.md
@@ -1,3 +1,28 @@
+#### Name:
+Z3
+
+#### Application domain/field:
+SMT (Satisfiability Modulo Theories)
+
+#### Type of tool (e.g. model checker, test generator):
 SMT solver
 
+#### URIs (github, websites, etc.):
 https://github.com/Z3Prover/z3
+
+#### Expected input:
+SMT formula in SMTLIB2 format
+
+There are bindings for .NET, C, C++, Java, OCaml, Python, Julia and Web Assembly
+
+#### Expected output:
+`sat` or `unsat`
+
+#### Internals (tools used, frameworks, techniques, paradigms, ...):
+
+#### Last publication date:
+
+#### List of related papers:
+https://doi.org/10.1007/978-3-540-78800-3_24
+
+
