Extended tool pages for Tools starting with A-AE

--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -97,7 +97,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-53288-8_23) Automated and Scalable Verification of Integer Multipliers.
     [Mertcan Temel](https://dblp.uni-trier.de/pid/269/9779.html), [Anna Slobodová](https://dblp.uni-trier.de/pid/34/5435.html), [Warren A. Hunt](https://dblp.uni-trier.de/pid/09/7554.html)
-	Verified with [[ACL2]]
+	Verified with ACL2, their tool doesn't have a name
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-53288-8_2) Verification of Deep Convolutional Neural Networks Using ImageStars.
     [Hoang-Dung Tran](https://dblp.uni-trier.de/pid/160/7295.html), [Stanley Bak](https://dblp.uni-trier.de/pid/16/7787.html), [Weiming Xiang](https://dblp.uni-trier.de/pid/72/5686.html), [Taylor T. Johnson](https://dblp.uni-trier.de/pid/96/11505.html)
