Added new template info to some tool pages

--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -90,7 +90,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_12) Automated Synthesis of Secure Platform Mappings.
     [Eunsuk Kang](https://dblp.uni-trier.de/pid/49/2420.html), [Stéphane Lafortune](https://dblp.uni-trier.de/pid/22/3097.html), [Stavros Tripakis](https://dblp.uni-trier.de/pid/85/6852.html)
-	Implemented in [[Mapping Synthesis Tool]]
+	Implemented as [[Mapping Synthesis Tool]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-25540-4_26) The [[Marabou]] Framework for Verification and Analysis of Deep Neural Networks.
     [Guy Katz](https://dblp.uni-trier.de/pid/23/10321.html), [Derek A. Huang](https://dblp.uni-trier.de/pid/244/8209.html), [Duligur Ibeling](https://dblp.uni-trier.de/pid/220/3264.html), [Kyle Julian](https://dblp.uni-trier.de/pid/195/5867.html), [Christopher Lazarus](https://dblp.uni-trier.de/pid/180/3521.html), [Rachel Lim](https://dblp.uni-trier.de/pid/127/9695.html), [Parth Shah](https://dblp.uni-trier.de/pid/147/1126.html), [Shantanu Thakoor](https://dblp.uni-trier.de/pid/218/7437.html), [Haoze Wu](https://dblp.uni-trier.de/pid/195/8725-1.html), [Aleksandar Zeljic](https://dblp.uni-trier.de/pid/147/5994.html), [David L. Dill](https://dblp.uni-trier.de/pid/d/DavidLDill.html), [Mykel J. Kochenderfer](https://dblp.uni-trier.de/pid/34/2029.html), [Clark W. Barrett](https://dblp.uni-trier.de/pid/b/ClarkWBarrett.html)
