Filled some more tool pages, up to and including Boogie

--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -18,7 +18,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_20) Synthesis of Asynchronous Reactive Programs from Temporal Specifications.
     [Suguman Bansal](https://dblp.uni-trier.de/pid/217/4777.html), [Kedar S. Namjoshi](https://dblp.uni-trier.de/pid/96/6348.html), [Yaniv Sa'ar](https://dblp.uni-trier.de/pid/58/1051.html)
-	Implemented prototype in [[BAS]] tool
+	Implemented prototype [[BAS]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_29) A Counting Semantics for Monitoring LTL Specifications over Finite Traces.
     [Ezio Bartocci](https://dblp.uni-trier.de/pid/b/EzioBartocci.html), [Roderick Bloem](https://dblp.uni-trier.de/pid/80/1300.html), [Dejan Nickovic](https://dblp.uni-trier.de/pid/60/1425.html), [Franz Röck](https://dblp.uni-trier.de/pid/39/8503.html)
