--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -93,7 +93,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-53288-8_22) Tinted, Detached, and Lazy CNF-XOR Solving and Its Applications to Counting and Sampling.
     [Mate Soos](https://dblp.uni-trier.de/pid/32/7137.html), [Stephan Gocht](https://dblp.uni-trier.de/pid/205/6044.html), [Kuldeep S. Meel](https://dblp.uni-trier.de/pid/129/1623.html)
-	Implemented in [[BIRD2]]
+	Implemented proposed architecture BIRD2 in [[ApproxMC4]] and [[UniGen3]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-53288-8_23) Automated and Scalable Verification of Integer Multipliers.
     [Mertcan Temel](https://dblp.uni-trier.de/pid/269/9779.html), [Anna Slobodová](https://dblp.uni-trier.de/pid/34/5435.html), [Warren A. Hunt](https://dblp.uni-trier.de/pid/09/7554.html)
