Added description to some tool pages, finished with tools starting with B

--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -103,7 +103,7 @@
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_31) [[Strix]] - Explicit Reactive Synthesis Strikes Back!
     [Philipp J. Meyer](https://dblp.uni-trier.de/pid/118/3833.html), [Salomon Sickert](https://dblp.uni-trier.de/pid/129/1369.html), [Michael Luttenberger](https://dblp.uni-trier.de/pid/62/964.html)
 
--   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_32) Btor2 , [[BtorMC]] and [[Boolector 3.0]].
+-   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_32) Btor2 , [[BtorMC]] and [[Boolector]] 3.0.
     [Aina Niemetz](https://dblp.uni-trier.de/pid/115/4373.html), [Mathias Preiner](https://dblp.uni-trier.de/pid/115/4371.html), [Clifford Wolf](https://dblp.uni-trier.de/pid/121/1469.html), [Armin Biere](https://dblp.uni-trier.de/pid/b/ArminBiere.html)
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_9) Exploiting Synchrony and Symmetry in Relational Verification.
