Added tool pages for tools starting with Ca-Ce, working on Ci

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -28,7 +28,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_21) Reasoning About TSO Programs Using Reduction and Abstraction.
     [Ahmed Bouajjani](https://dblp.uni-trier.de/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.uni-trier.de/pid/72/2839.html), [Suha Orhun Mutluergil](https://dblp.uni-trier.de/pid/170/4198.html), [Serdar Tasiran](https://dblp.uni-trier.de/pid/88/1444.html)
-	Checked soundness of abstractions with [[CIVL]]
+	Checked soundness of abstractions with CIVL
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_13) Symbolic Algorithms for Graphs and Markov Decision Processes with Fairness Objectives.
     [Krishnendu Chatterjee](https://dblp.uni-trier.de/pid/92/5602.html), [Monika Henzinger](https://dblp.uni-trier.de/pid/h/MonikaRauchHenzinger.html), [Veronika Loitzenbauer](https://dblp.uni-trier.de/pid/132/9047.html), [Simin Oraee](https://dblp.uni-trier.de/pid/218/5331.html), [Viktor Toman](https://dblp.uni-trier.de/pid/215/3408.html)
@@ -84,7 +84,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_16) Solving Quantified Bit-Vectors Using Invertibility Conditions.
     [Aina Niemetz](https://dblp.uni-trier.de/pid/115/4373.html), [Mathias Preiner](https://dblp.uni-trier.de/pid/115/4371.html), [Andrew Reynolds](https://dblp.uni-trier.de/pid/41/9861.html), [Clark W. Barrett](https://dblp.uni-trier.de/pid/b/ClarkWBarrett.html), [Cesare Tinelli](https://dblp.uni-trier.de/pid/37/4921.html)
-	Implemented in [[cegqi]]
+	Implemented in [[CVC4]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96142-2_17) Understanding and Extending Incremental Determinization for 2QBF.
     [Markus N. Rabe](https://dblp.uni-trier.de/pid/88/1112-2.html), [Leander Tentrup](https://dblp.uni-trier.de/pid/143/2715.html), [Cameron Rasmussen](https://dblp.uni-trier.de/pid/223/5057.html), [Sanjit A. Seshia](https://dblp.uni-trier.de/pid/s/SanjitASeshia.html)
