--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -68,7 +68,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-53288-8_14) Refinement for Structured Concurrent Programs.
     [Bernhard Kragl](https://dblp.uni-trier.de/pid/138/6924.html), [Shaz Qadeer](https://dblp.uni-trier.de/pid/q/ShazQadeer.html), [Thomas A. Henzinger](https://dblp.uni-trier.de/pid/h/ThomasAHenzinger.html)
-	Implemented in [[CIVL]]
+	Implemented in [[CIVL (Boogie extension)]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-030-53288-8_16) [[Hampa]] - Solver-Aided Recency-Aware Replication.
     [Xiao Li](https://dblp.uni-trier.de/pid/66/2069.html), [Farzin Houshmand](https://dblp.uni-trier.de/pid/232/9988.html), [Mohsen Lesani](https://dblp.uni-trier.de/pid/82/2603.html)
