--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -91,7 +91,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_5) Layered Concurrent Programs.
     [Bernhard Kragl](https://dblp.uni-trier.de/pid/138/6924.html), [Shaz Qadeer](https://dblp.uni-trier.de/pid/q/ShazQadeer.html)
-	Tool: [[CIVL]]
+	Tool: [[CIVL (Boogie extension)]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/https://doi.org/10.1007/978-3-319-96145-3_30) [[Rabinizer 4]] - From LTL to Your Favourite Deterministic Automaton.
     [Jan Kretínský](https://dblp.uni-trier.de/pid/95/6511.html), [Tobias Meggendorfer](https://dblp.uni-trier.de/pid/194/2764.html), [Salomon Sickert](https://dblp.uni-trier.de/pid/129/1369.html), [Christopher Ziegler](https://dblp.uni-trier.de/pid/223/5064.html)
