--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -23,7 +23,7 @@
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53288-8_9) Stratified Abstraction of Access Control Policies.
     [John Backes](https://dblp.uni-trier.de/pid/97/8857.html), [Ulises Berrueco](https://dblp.uni-trier.de/pid/269/9629.html), [Tyler Bray](https://dblp.uni-trier.de/pid/269/9691.html), [Daniel Brim](https://dblp.uni-trier.de/pid/269/9566.html), [Byron Cook](https://dblp.uni-trier.de/pid/36/113.html), [Andrew Gacek](https://dblp.uni-trier.de/pid/84/6151.html), [Ranjit Jhala](https://dblp.uni-trier.de/pid/47/4244.html), [Kasper Søe Luckow](https://dblp.uni-trier.de/pid/13/11526.html), [Sean McLaughlin](https://dblp.uni-trier.de/pid/66/5402.html), [Madhav Menon](https://dblp.uni-trier.de/pid/159/9350.html), [Daniel Peebles](https://dblp.uni-trier.de/pid/79/6508.html), [Ujjwal Pugalia](https://dblp.uni-trier.de/pid/269/9487.html), [Neha Rungta](https://dblp.uni-trier.de/pid/66/4832.html), [Cole Schlesinger](https://dblp.uni-trier.de/pid/31/10028.html), [Adam Schodde](https://dblp.uni-trier.de/pid/269/9505.html), [Anvesh Tanuku](https://dblp.uni-trier.de/pid/269/9587.html), [Carsten Varming](https://dblp.uni-trier.de/pid/29/2675.html), [Deepa Viswanathan](https://dblp.uni-trier.de/pid/19/1723.html)
-	Implemented in [[IAM Access Analyzer]], uses [[Zelkova]]
+	Implemented in [[IAM Access Analyzer]]
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-53288-8_4) Improved Geometric Path Enumeration for Verifying ReLU Neural Networks.
     [Stanley Bak](https://dblp.uni-trier.de/pid/16/7787.html), [Hoang-Dung Tran](https://dblp.uni-trier.de/pid/160/7295.html), [Kerianne Hobbs](https://dblp.uni-trier.de/pid/200/8219.html), [Taylor T. Johnson](https://dblp.uni-trier.de/pid/96/11505.html)
