Added tool pages starting with H-

--- a/Conferences/CAV 2019(2).md
+++ b/Conferences/CAV 2019(2).md
@@ -7,7 +7,7 @@
     [John Backes](https://dblp.uni-trier.de/pid/97/8857.html), [Sam Bayless](https://dblp.uni-trier.de/pid/115/4378.html), [Byron Cook](https://dblp.uni-trier.de/pid/36/113.html), [Catherine Dodge](https://dblp.uni-trier.de/pid/79/3346.html), [Andrew Gacek](https://dblp.uni-trier.de/pid/84/6151.html), [Alan J. Hu](https://dblp.uni-trier.de/pid/01/2712.html), [Temesghen Kahsai](https://dblp.uni-trier.de/pid/02/6790.html), [Bill Kocik](https://dblp.uni-trier.de/pid/244/8238.html), [Evgenii Kotelnikov](https://dblp.uni-trier.de/pid/39/11063.html), [Jure Kukovec](https://dblp.uni-trier.de/pid/219/2203.html), [Sean McLaughlin](https://dblp.uni-trier.de/pid/66/5402.html), [Jason Reed](https://dblp.uni-trier.de/pid/244/8203.html), [Neha Rungta](https://dblp.uni-trier.de/pid/66/4832.html), [John Sizemore](https://dblp.uni-trier.de/pid/244/8225.html), [Mark A. Stalzer](https://dblp.uni-trier.de/pid/41/5189.html), [Preethi Srinivasan](https://dblp.uni-trier.de/pid/182/4720.html), [Pavle Subotic](https://dblp.uni-trier.de/pid/124/8970.html), [Carsten Varming](https://dblp.uni-trier.de/pid/29/2675.html), [Blake Whaley](https://dblp.uni-trier.de/pid/244/8299.html)
 	Implemented [[TIROS]]
 
--   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-25543-5_10) [[Icing]] - Supporting Fast-Math Style Optimizations in a Verified Compiler.
+-   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-25543-5_10) Icing - Supporting Fast-Math Style Optimizations in a Verified Compiler.
     [Heiko Becker](https://dblp.uni-trier.de/pid/180/4436.html), [Eva Darulova](https://dblp.uni-trier.de/pid/75/10322.html), [Magnus O. Myreen](https://dblp.uni-trier.de/pid/92/2955.html), [Zachary Tatlock](https://dblp.uni-trier.de/pid/24/2888.html)
 
 -   [![](https://dblp.uni-trier.de/img/paper-oa.dark.hollow.16x16.png)](https://doi.org/10.1007/978-3-030-25543-5_17) Checking Robustness Against Snapshot Isolation.
